login-page overflow fix

--- a/src/scss/extra/hpass.scss
+++ b/src/scss/extra/hpass.scss
@@ -65,8 +65,11 @@
 
 
 body.anon{
-  background-image: url("/img/extra/hpass/background.jpg");
   background-size: cover;
+  overflow:hidden;
+  min-height:100%;
+  background: url("/img/extra/hpass/background.png") no-repeat;
+
 
   @media (max-width: 425px){
     background:none;
